--- a/edm/src/app/pages/index/index.component.html
+++ b/edm/src/app/pages/index/index.component.html
@@ -1,1 +1,125 @@
-<p>index works!</p>
+<div class="parent">
+	<!-- Banner Section -->
+	<div id="HomeBanner" class="carousel slide home_banner" data-ride="carousel">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+			<div class="item active">
+				<img src="assets/images/banner.svg" alt="">
+			</div>
+			<div class="item">
+				<img src="assets/images/banner.svg" alt="">
+			</div>
+			<div class="item">
+				<img src="assets/images/banner.svg" alt="">
+			</div>
+		</div>
+		<!-- Wrapper for slides -->
+		<!-- Left and right controls -->
+		<a class="left carousel-control" href="#HomeBanner" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+			<span class="sr-only"></span>
+		</a>
+		<a class="right carousel-control" href="#HomeBanner" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+			<span class="sr-only"></span>
+		</a>
+		<!-- Left and right controls -->
+	</div>
+	<!-- Banner Section -->
+
+	<!-- Featured Track Section -->
+	<div class="featured_track_section">
+		<div class="bold_heading">
+			FEATURED TRACK
+		</div>
+		<div class="featured_track_list">
+			<div class="track_box">
+				<div class="track_thumbnail_image">
+					<img src="assets/images/track_thumbnail_1.svg" alt="Track Thumbnail" />
+					<div class="track_hover_section">
+						<img src="assets/images/play.svg" alt="Play Button" />
+						<img src="assets/images/pause.svg" alt="Pause Button" />
+						<div class="track_details">
+							<p class="track_owner_name">MOMOSE</p>
+							<p class="track_price">&#36; 499</p>
+						</div>
+					</div>
+				</div>
+				<a class="track_discription" href="#">
+					<p class="track_name">BRASTIE</p>
+					<span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+				</a>
+			</div>
+			<div class="track_box">
+				<div class="track_thumbnail_image">
+					<img src="assets/images/track_thumbnail_1.svg" alt="Track Thumbnail" />
+					<div class="track_hover_section">
+						<img src="assets/images/play.svg" alt="Play Button" />
+						<img src="assets/images/pause.svg" alt="Pause Button" />
+						<div class="track_details">
+							<p class="track_owner_name">MOMOSE</p>
+							<p class="track_price">&#36; 499</p>
+						</div>
+					</div>
+				</div>
+				<a class="track_discription" href="#">
+					<p class="track_name">BRASTIE</p>
+					<span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+				</a>
+			</div>
+			<div class="track_box">
+				<div class="track_thumbnail_image">
+					<img src="assets/images/track_thumbnail_1.svg" alt="Track Thumbnail" />
+					<div class="track_hover_section">
+						<img src="assets/images/play.svg" alt="Play Button" />
+						<img src="assets/images/pause.svg" alt="Pause Button" />
+						<div class="track_details">
+							<p class="track_owner_name">MOMOSE</p>
+							<p class="track_price">&#36; 499</p>
+						</div>
+					</div>
+				</div>
+				<a class="track_discription" href="#">
+					<p class="track_name">BRASTIE</p>
+					<span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+				</a>
+			</div>
+			<div class="track_box">
+				<div class="track_thumbnail_image">
+					<img src="assets/images/track_thumbnail_1.svg" alt="Track Thumbnail" />
+					<div class="track_hover_section">
+						<img src="assets/images/play.svg" alt="Play Button" />
+						<img src="assets/images/pause.svg" alt="Pause Button" />
+						<div class="track_details">
+							<p class="track_owner_name">MOMOSE</p>
+							<p class="track_price">&#36; 499</p>
+						</div>
+					</div>
+				</div>
+				<a class="track_discription" href="#">
+					<p class="track_name">BRASTIE</p>
+					<span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+				</a>
+			</div>
+			<div class="track_box">
+				<div class="track_thumbnail_image">
+					<img src="assets/images/track_thumbnail_1.svg" alt="Track Thumbnail" />
+					<div class="track_hover_section">
+						<img src="assets/images/play.svg" alt="Play Button" />
+						<img src="assets/images/pause.svg" alt="Pause Button" />
+						<div class="track_details">
+							<p class="track_owner_name">MOMOSE</p>
+							<p class="track_price">&#36; 499</p>
+						</div>
+					</div>
+				</div>
+				<a class="track_discription" href="#">
+					<p class="track_name">BRASTIE</p>
+					<span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+				</a>
+			</div>
+		</div>
+	</div>
+	<!-- Featured Track Section -->
+
+</div>
