--- a/edm/src/app/theme/client/header/header.component.html
+++ b/edm/src/app/theme/client/header/header.component.html
@@ -1,1 +1,85 @@
-<p>client header works!</p>
+<!-- <img src="assets/images/ss1.PNG" style="position: fixed;top: 0;left: 0;opacity: 0.2;width: 100%;"/> -->
+<div class="header">
+    <a class="company_logo">
+        <img src="../assets/images/EDM_logo.png" alt="EDM GHOSTPRODUCING Logo" title="EDM GHOSTPRODUCING" />
+    </a>
+    <div class="menu_section">
+        <div class="menu_link">
+            <ul>
+                <li>
+                    <a href="#" title="SHOP">SHOP</a>
+                </li>
+                <li>
+                    <a href="#" title="GENRE">
+                        GENRE <i class="la la-angle-down"></i>
+                        <div class="inner_menu">
+                            <div class="inner_menu_container">
+                                <div class="innermenu_box">
+                                    <ul>
+                                        <li>
+                                            <a href="#" title="BIG ROOM">BIG ROOM</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="DEEP HOUSE">DEEP HOUSE</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="DUBSTEP">DUBSTEP</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="FUTURE BASS">FUTURE BASS</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="TECHNO">TECHNO</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="innermenu_box">
+                                    <ul>
+                                        <li>
+                                            <a href="#" title="TRAP">TRAP</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="PROGRESSIVE HOUSE">PROGRESSIVE HOUSE</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="TROPICAL">TROPICAL</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="FUTURE HOUSE">FUTURE HOUSE</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="CUSTOM TRACK">CUSTOM TRACK</a>
+                </li>
+                <li>
+                    <a href="#" title="BE A GHOST PRODUCER">BE A GHOST PRODUCER</a>
+                </li>
+                <li>
+                    <a href="#" title="MY ACCOUNT">MY ACCOUNT</a>
+                </li>
+                <li>
+                    <a href="#" title="MORE">MORE</a>
+                </li>
+            </ul>
+        </div>
+        <div class="menu_icon">
+            <ul>
+                <li title="Add To Cart">
+                    <a href="#">
+                        <i class="la la-shopping-cart"></i>
+                    </a>
+                </li>
+                <li title="Search">
+                    <a href="#">
+                        <i class="la la-search"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
