Company's Work Thumbnail Design & Gradient Scrool added & BG image added

--- a/edm/src/app/pages/index/index.component.html
+++ b/edm/src/app/pages/index/index.component.html
@@ -32,7 +32,6 @@
 		<div class="bold_heading">
 			FEATURED TRACK
 		</div>
-		<!-- <img src="assets/images/track.PNG" style="position: absolute;opacity: 0.2;top: 616px;"> -->
 		<div class="featured_track_list">
 			<div class="track_box">
 				<div class="track_thumbnail_image">
@@ -125,7 +124,48 @@
 				</a>
 			</div>
 		</div>
+		<div class="btn_section">
+			<div class="default_btn">
+				<span>GO TO SHOP</span>
+				<span class="btn_icon"><img src="assets/images/banner_arrow.svg" alt="GO TO SHOP" /></span>
+			</div>
+		</div>
 	</div>
 	<!-- Featured Track Section -->
+
+	<!-- Company Works Section -->
+	<div class="companys_work_section">
+		<div class="logo_designing_section">
+			<div class="work_list">
+				<img src="assets/images/logo_design.svg" alt="LOGO DESIGNING THUMBNAIL" title="LOGO DESIGNING">
+				<div class="work_name">
+					<p>LOGO DESIGNING</p>
+				</div>
+			</div>
+		</div>
+		<div class="development_section">
+			<div class="work_list">
+				<img src="assets/images/website_design.svg" alt="WEBSITE DESIGNING & DEVELOPMENT THUMBNAIL" title="WEBSITE DESIGNING & DEVELOPMENT">
+				<div class="work_name">
+					<p>WEBSITE DESIGNING & DEVELOPMENT</p>
+				</div>
+			</div>
+			<div class="work_list">
+				<img src="assets/images/album_art.svg" alt="ALBUM ART THUMBNAIL" title="ALBUM ART">
+				<div class="work_name">
+					<p>ALBUM ART</p>
+				</div>
+			</div>
+		</div>
+		<div class="artist_illustration_section">
+			<div class="work_list">
+				<img src="assets/images/artist_illustation.svg" alt="ART ILLUSTRATION THUMBNAIL" title="ART ILLUSTRATION">
+				<div class="work_name">
+					<p>ARTIST ILLUSTRATION</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Company Works Section -->
 
 </div>
