--- a/edm/src/app/theme/client/body/body.component.html
+++ b/edm/src/app/theme/client/body/body.component.html
@@ -1,3 +1,5 @@
-<app-clientheader></app-clientheader>
+<div class="">
+    
+</div><app-clientheader></app-clientheader>
 <router-outlet></router-outlet>
 <app-clientfooter></app-clientfooter>
