Smooth hover effect added & Similar Font added & Product page design (SHOP Page)

--- a/edm/src/app/pages/index/index.component.html
+++ b/edm/src/app/pages/index/index.component.html
@@ -147,7 +147,7 @@
 			<div class="work_list">
 				<img src="assets/images/website_design.svg" alt="WEBSITE DESIGNING & DEVELOPMENT THUMBNAIL" title="WEBSITE DESIGNING & DEVELOPMENT">
 				<div class="work_name">
-					<p>WEBSITE DESIGNING & DEVELOPMENT</p>
+					<p>WEBSITE DESIGNING <span class="normal_font">&</span> DEVELOPMENT</p>
 				</div>
 			</div>
 			<div class="work_list">
