--- a/edm/src/app/pages/productmodule/productmodule.component.html
+++ b/edm/src/app/pages/productmodule/productmodule.component.html
@@ -1,1 +1,220 @@
-<p>productmodule works!</p>
+	<!-- Shop Featured Track Section -->
+    <div class="featured_track_list">
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_1.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" title="Play" alt="Play Button" />
+                    <img src="assets/images/pause.svg" title="Pause" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">BRASTIE</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_2.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">GLORY</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_3.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">INVERT</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_4.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">OLD SCHOOL</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">RAIN</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_2.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">GLORY</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_3.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">INVERT</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_4.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">OLD SCHOOL</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">RAIN</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_3.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">INVERT</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_4.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">OLD SCHOOL</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+        <div class="track_box">
+            <div class="track_thumbnail_image">
+                <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
+                <div class="track_hover_section">
+                    <img src="assets/images/play.svg" alt="Play Button" />
+                    <img src="assets/images/pause.svg" alt="Pause Button" style="display: none;" />
+                    <div class="track_details">
+                        <p class="track_owner_name">MOMOSE</p>
+                        <p class="track_price">$499</p>
+                    </div>
+                </div>
+            </div>
+            <a class="track_discription" href="#">
+                <span class="track_name">RAIN</span>
+                <span class="track_divider"></span>
+                <span class="add_to_card_track"><i class="la la-shopping-cart"></i></span>
+            </a>
+        </div>
+    </div>
+<!-- Shop Featured Track Section -->
