--- a/edm/src/app/pages/productdetailsmodule/productdetailsmodule.component.html
+++ b/edm/src/app/pages/productdetailsmodule/productdetailsmodule.component.html
@@ -1,1 +1,6 @@
-<p>productdetailsmodule works!</p>
+<!-- <img src="assets/images/track.PNG" style="position: absolute;top: 40px;opacity: 0.2;"> -->
+<!-- Shop Featured Track Details Section -->
+    <div class="shop_track_thumbnail">
+        <img src="assets/images/track_thumbnail_5.svg" class="track_thumbnail" alt="Track Thumbnail" />
+    </div>
+<!-- Shop Featured Track Details Section -->
