--- a/edm/src/assets/css/global.css
+++ b/edm/src/assets/css/global.css
@@ -1,4 +1,19 @@
-/* Global styles */
+/* Font Style */
+@font-face {
+    font-family: "VerminVibes2Black";
+    src: url("./fonts/VerminVibes2Black.eot"); /* IE9 Compat Modes */
+    src: url("./fonts/VerminVibes2Black.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+      url("./fonts/VerminVibes2Black.otf") format("opentype"), /* Open Type Font */
+      url("./fonts/VerminVibes2Black.svg") format("svg"), /* Legacy iOS */
+      url("./fonts/VerminVibes2Black.ttf") format("truetype"), /* Safari, Android, iOS */
+      url("./fonts/VerminVibes2Black.woff") format("woff"), /* Modern Browsers */
+      url("./fonts/VerminVibes2Black.woff2") format("woff2"); /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+  }
+/* Font Style */
+
+/* Global style */
 *, *:hover {
     padding: 0;
     margin: 0;
@@ -12,9 +27,6 @@
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
-}
-a:hover {
-    color: inherit;
 }
 dl, ol, ul {
     margin: 0;
@@ -48,9 +60,9 @@ dl, ol, ul {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00E5FF', endColorstr='#CCFF90',GradientType=0 ); /* ie6-9 */
 
 }
-/* Global styles */
+/* Global style */
 
-/* Header styles */
+/* Header style */
 body {
     background: url("../images/global_bg.jpg");
     background-size: cover;
@@ -172,9 +184,9 @@ body {
     background: linear-gradient(177deg, rgba(0,229,255,1) 0%, rgba(204,255,144,1) 70%, rgba(204,255,144,1) 100%); /* w3c */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00E5FF', endColorstr='#CCFF90',GradientType=0 ); /* ie6-9 */
 }
-/* Header styles */
+/* Header style */
 
-/* Banner styles */
+/* Banner style */
 .home_banner .carousel-control {
     background: none !important;
 }
@@ -212,7 +224,7 @@ body {
 .home_banner {
     margin-bottom: 40px;
 }
-/* Banner styles */
+/* Banner style */
 
 /* Featured Track style */
 .featured_track_section {
@@ -223,9 +235,11 @@ body {
     text-align: center;
     font-size: 32px;
     position: relative;
-    width: 290px;
+    width: 355px;
     margin: 0 auto;
-    margin-bottom: 15px;
+    font-family: VerminVibes2Black;
+    letter-spacing: 3px;
+    margin-bottom: 55px;
 }
 .bold_heading:after {
     content: "";
@@ -261,15 +275,13 @@ body {
     border-radius: 1px;
 }
 .featured_track_list {
-    padding: 53px 0 0 0;
     max-width: 93%;
     margin: 0 auto;
-    margin-bottom: 40px;
 }
 .track_box {
     width: 20%;
     display: inline-block;
-    padding: 0 2%;
+    padding: 0 2% 4% 2%;
 }
 .track_thumbnail_image {
     position: relative;
@@ -298,6 +310,10 @@ body {
     margin: auto;
     width: 45px;
     cursor: pointer;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
 }
 .track_details {
     position: absolute;
@@ -354,14 +370,14 @@ body {
     font-size: 12px;
     padding: 0px 1px;
 }
-.track_thumbnailtrack_box_image:hover .track_thumbnail {
+.track_thumbnail_image:hover .track_thumbnail {
     -webkit-filter: blur(2px);
     filter: blur(2px);
 }
 .track_thumbnail_image:hover .track_hover_section {
     display: block;
 }
-.track_box:hover, .track_box:hover .add_to_card_track {
+.track_box:hover {
     border-color: #CCFF90;
 }
 .btn_section {
@@ -385,6 +401,7 @@ body {
     font-size: 28px;
     border-radius: 16px;
     cursor: pointer;
+    font-family: VerminVibes2Black;
 }
 .default_btn > span {
     display: inline-block;
@@ -392,6 +409,9 @@ body {
 .btn_icon img {
     width: 30px;
     margin: 0 0 0 15px;
+}
+.track_discription:hover * {
+    color: white;
 }
 /* Featured Track style */
 
@@ -448,7 +468,12 @@ body {
     display: table-cell;
     vertical-align: middle;
     color: white;
-    font-size: 24px;
+    font-size: 22px;
     padding: 0 15px;
+    font-family: VerminVibes2Black;
+    letter-spacing: 1px;
+}
+.normal_font {
+    font-family: arial;
 }
 /* Company Works Style */
